# databricks-perf-toolkit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.ja.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
dabs/: .gitignore  databricks.yml  local-overrides.yml.sample
dabs/app/: .gitignore  app.py  app.yaml  babel.cfg  profiler_analyzer.py  requirements.txt
dabs/notebooks/: 01_Spark Perf Pipeline PySpark.py  02_generate_summary_notebook.py  03_create_dashboard_notebook.py  knowledge_base_manager.py  optimization_knowledge_base.py
dabs/resources/: apps.yml  jobs.yml
docs/: README.md  action-plan-generation.md  analysis-pipeline.md  api-reference.md  architecture-overview.md  data-flow.md  genie-space-setup.md  key-mapping.md  knowledge-injection.md  llm-model-evaluation-results.md  llm-stages.md  operations-guide.md  report-rendering.md  v3-detailed-design.md  v5-vs-v6.md  v6-spec.md
docs/eval/: ab_runner_design.md  llm_acceptance_runbook.md  r10_quality_addon_design.md  regression_detector_design.md  report_quality_rubric.md  scorer_mapping.md  v6_acceptance_policy.md
docs/knowledge/: v6_knowledge_policy.md
docs/v6/: README.md  alias-admission-rule.md  api-endpoints.md  canonical_schema_inventory.md  five-layer-feedback.md  getting-started.md  knowledge_inventory.md  operations.md  output_contract.md  query-rewrite-extraction.md  sql_skeleton_design.md  v61_plan.md  why-default-on.md
eval/: README.md  __init__.py  __main__.py  ab_runner.py  cli.py  diff_judge.py  diff_report.py  diff_runner.py  goldens_runner.py  models.py  profile_evidence.py  regression_detector.py  report.py  runner.py  stage_gate.py  stage_gate_runner.py
eval/fixtures/: README.md
eval/goldens/: README.md  global_forbidden.yaml  manifest.yaml
eval/regression_summary/: v61_baseline.json  v61_baseline.md  v6_w5_baseline.md  (+1 more)
schemas/: report_v6.schema.json
scripts/: deploy.sh  deploy_views.py  eval_models.py  generate_runtime_config.py  reset.sh  smoke_test.py  ui_smoke_test.py  validate_key_mapping.py
(+341 files in other folders)
