[project]
name = "dbsql-profiler-analyzer"
version = "5.19.3"
description = "Databricks SQL Query Profile Analyzer using LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "sqlparse>=0.5.0",
    "sqlglot>=26.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0.0,<4.0.0",
    "flask-babel>=4.0.0",
    "markdown>=3.5.0",
]

[project.scripts]
profiler-analyzer = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dabs/app/core", "dabs/app/cli"]

[tool.hatch.build.targets.wheel.sources]
"dabs/app/core" = "core"
"dabs/app/cli" = "cli"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["core.models", "core.evidence", "core.constants"]
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-import-not-at-top — Flask blueprints use intentional lazy imports
    "B905",   # zip-without-strict — defer to Python 3.10+ default
    "B017",   # assert-raises-exception — acceptable pattern in tests
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[[tool.uv.index]]
url = "https://pypi-proxy.dev.databricks.com/simple"
default = true

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "mypy>=1.11.0",
]
ui-smoke = [
    "playwright>=1.58.0",
]
dev = [
    "babel>=2.18.0",
]
